# master-thesis

./: .gitignore  LICENSE.txt  README.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  postInstall.sh
dev/: README.md  pyproject.toml
dev/agent-frontend/: README.md  index.html  package.json
dev/agent-frontend/src/: App.vue
dev/agent-frontend/src/assets/: main.css
dev/evaluation/: stat.ipynb
dev/questionnaire/: README.md  package.json
dev/questionnaire/src/: App.vue
dev/questionnaire/src/assets/: main.css
dev/src/: cql_graph.py  main_graph.py  rocket_graph.py  server.py
dev/src/confluence/: __init__.py  graph.py  tool.py
dev/src/main/: __init__.py  graph.py
dev/src/prompts/confluence/: __init__.py  cql_prompt.j2  cql_prompt.py  page_summary.j2  page_summary.py
dev/src/prompts/general/: __init__.py  is_hallucination.j2  is_hallucination.py
dev/src/prompts/main/: __init__.py  aggregate.j2  tool_choice.j2  tool_choice.py  validation.j2  validation.py  validation_failed.j2
dev/src/prompts/rocket/: __init__.py  channel_selection.j2  channel_selection.py  regex_search.j2  regex_search.py  summarize_chat.j2  summarize_chat.py
dev/src/prompts/rocket/dto/: dm.j2  group.j2  thread.j2
dev/src/rocket/: __init__.py  graph.py  tool.py
dev/src/shared/: configuration.py  main_output.py  models.py  state.py
dev/src/util/: ConfluenceClient.py  agent_functions.py  embedding.py  environment.py  llm_operations.py  log_format.py  rocket_client.py
